--- a/synthese/biblio.bib
+++ b/synthese/biblio.bib
@@ -1,28 +1,53 @@
 @Article{schrij02,
 	title = {On the history of the transportation and maximum flow problem},
 	author = {A. Shrijver},
-	journal = {Math. Programming},
+	volume = {91},
+	pages = {437 -- 445},
+	journal = {International Symposium of the Mathematical Programming Society},
 	year = {2002},
-	month = {}
+	month = {},
+	publisher = {Springer}
 }
 @Article{gold88,
 	title = {A new approach to the maximum flow problem},
-	author = {A. Goldberg, R. Tarjan},
+	author = {A. Goldberg and R. Tarjan},
 	journal = {Journal of the Association for Computing Machinery},
 	volume = {35},
 	year = {1988},
-	pages = {921 - 940},
+	pages = {921 -- 940},
 	month = {October}
 }
-@book{netflow,
-	author={R. Ahuja, T. Magnanti, J. Orlin},
-	title={Network flows, theory, algorithms and applications},
-	year={1993},
-	publisher={Prentice Hall}
+@book{ahuj93,
+	address = {Englewood Cliffs, NJ},
+	author = {Ahuja, Ravindra K. and Magnanti, Thomas L. and Orlin, James B.},
+	publisher = {Prentice Hall},
+	title = {Network Flows: Theory, Algorithms, and Applications},
+	year = {1993}
 }
 @book{introalg,
-	author={T. Cormen, C. Leiserson, R. Rivest, C. Stein},
+	author={T. Cormen and C. Leiserson and R. Rivest and C. Stein},
 	title={Introduction à l'algorithmique},
 	year={2001},
 	publisher={Dunod}
 }
+@ARTICLE{cher98,
+	author = {Joseph Cheriyan and Kurt Mehlhorn},
+	title = {An Analysis of the Highest-Level Selection Rule in the Preflow-Push Max-Flow Algorithm},
+	journal = {Information Processing Letters},
+	year = {1998},
+	volume = {69},
+	pages = {69--239}
+}
+@article{Ed72,
+	author = {Edmonds, Jack and Karp, Richard M.},
+	title = {Theoretical Improvements in Algorithmic Efficiency for Network Flow Problems},
+	journal = {J. ACM},
+	volume = {19},
+	number = {2},
+	month = {April},
+	year = {1972},
+	issn = {0004-5411},
+	pages = {248--264},
+	publisher = {ACM},
+	address = {New York, NY, USA},
+} 
