--- a/synthese/synthese.tex
+++ b/synthese/synthese.tex
@@ -1,6 +1,6 @@
 \input{library}
 
-\author{BEN MOQADEM Mahdi \and DUVILLIE Guillerme \and OULD MOHAMED ABDELLAHI CHEIKH Mehdi}
+\author{DUVILLIE Guillerme \and OULD MOHAMED ABDELLAHI CHEIKH Mehdi}
 \title{Sur le problème des préflots}
 
 \begin{document}
@@ -11,7 +11,6 @@
 \tableofcontents
 \newpage
 
-\part{Introduction, pré-requis}
 \input{introduction.tex}
 
 \part{Les algorithmes}
