--- a/synthese/complexite_algo_generique.tex
+++ b/synthese/complexite_algo_generique.tex
@@ -141,7 +141,7 @@ de $i$ vers $s$ dans le réseau résiduel.\\
 On peut directement déduire de ce lemme que, pour un noeud actif $i$, il existe toujours un
 noeud de son voisinage $j$ tel que $d(j) \geq d(i)$ et donc que lors d'un réétiquetage, la
 minimisation de la hauteur des voisins ne se fait pas sur un ensemble vide. Autrement dit, pour un
-n\oe ud que l'on réétiquete, il existe toujours un sommet de son voisinage dont la distance au puits
+n\oe ud que l'on réétiquette, il existe toujours un sommet de son voisinage dont la distance au puits
 est supérieure au n\oe ud réétiqueté.
 
 \begin{lemma} ~\\
@@ -253,7 +253,7 @@ Lors du déroulement de l'algorithme, trois choses peuvent se produire : \begin{
 	\item Poussage saturant. Il a lieu lorsque $e(i) \geq r((i,j))$, Dans le pire des cas, $j \not
 		\in I$ avant l'opération, on a alors une augmentation maximale de $\Phi$ égale à la hauteur max
 		de $j$, soit $2n$ donc une augmentation de $2n^2m$ pour l'ensemble des poussages saturants.
-	\item Ré-étiquetage. Cette opération n'a lieu que lorsqu'aucun arc sortant de $i$ n'est valide
+	\item Réétiquetage. Cette opération n'a lieu que lorsqu'aucun arc sortant de $i$ n'est valide
 		pour une opération de poussage, il est évident que chaque opération de réétiquetage augmente
 		$\Phi$ de $2n$ unités au maximum par noeud\footnote{Limite donnée par la hauteur maximale d'un
 		noeud.}, soit une augmentation totale de $n^2$ unités sur l'ensemble de l'algorithme.
