Rapport : Début de la rédacton des testsw

--- a/synthese/synthese.tex
+++ b/synthese/synthese.tex
@@ -26,6 +26,10 @@
 \section{Algorithme High Label}
 \input{complexite_algo_highest_label.tex}
 
+\part{Tests}
+\input{tests.tex}
+
+\newpage
 \bibliographystyle{plain}
 \bibliography{biblio}
 
